--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
       "baseUrl": "./src",  
       "paths": {
         "@components/*": ["components/*"],  
+        "@icons/*": ["Icons/*"],  
       },
 }}
