--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,12 @@ on:
     branches: [ main, master ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+  attestations: write
+  id-token: write
+
 env:
   NODE_VERSION: '18'
   PROJECT_NAME: 'codecrafter-studio'
@@ -59,12 +65,17 @@ jobs:
           path: dist/
           retention-days: 7
 
-  #Build Docker Image
+  # 🐳 JOB 2: Build Docker Image
   build-docker:
     name: 🐳 Build Docker Image
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push'
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     
     outputs:
       image-digest: ${{ steps.build.outputs.digest }}
@@ -88,7 +99,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
 
       - name: 🏷️ Extract Metadata
         id: meta
@@ -166,7 +177,7 @@ jobs:
             mkdir -p logs/nginx
             
             # Login a GitHub Container Registry
-            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+            echo "${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}" | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
             
             # Pull de la nueva imagen
             echo "📥 Descargando nueva imagen..."
